buildscript{
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE")
    }
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'maven'

    group = 'pecker'
    version = '1.0-SNAPSHOT'
}

subprojects {
    repositories {
        mavenCentral()
    }
    sourceCompatibility = 1.11
    targetCompatibility = 1.11
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    ext {
        lombokVersion = '1.18.16'
        asmVersion = '1.11.9'
        commonsCollectionVersion = '4.3'
        commonsLangVersion = '3.11'
        cglibVersion = '3.3.0'
        slf4jApiVersion = '1.7.30'
        commonsNetVersion = '3.7.2'
        javassistVersion = '3.27.0-GA'
    }

    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        dependencies {
            dependency "org.projectlombok:lombok:$lombokVersion"
            dependency "com.esotericsoftware:reflectasm:$asmVersion"
            dependency "org.apache.commons:commons-collections4:$commonsCollectionVersion"
            dependency "org.apache.commons:commons-lang3:$commonsLangVersion"
            dependency "cglib:cglib:$cglibVersion"
            dependency "org.slf4j:slf4j-api:$slf4jApiVersion"
            dependency "commons-net:commons-net:$commonsNetVersion"
            dependency "org.javassist:javassist:$javassistVersion"

        }
    }

    dependencies {
        testCompile group: 'junit', name: 'junit', version: '4.12'
        compile(
                "org.projectlombok:lombok",
                "org.apache.commons:commons-collections4",
                "org.apache.commons:commons-lang3",
                "org.slf4j:slf4j-api"
        )
        annotationProcessor "org.projectlombok:lombok"
    }
}
